Fix images in GDB blog post
This change crops the images used in the post (done using Inkscape and
`svgo`), and replaces inline `<img>` tags with Markdown images (with
proper alt text).

The images should now render correctly on mobile: before, they were
cropped.

--- a/assets/static/css/graphene/style.css
+++ b/assets/static/css/graphene/style.css
@@ -108,6 +108,17 @@ body {
     padding-right: 23px;
 }
 
+.section-blog-post img {
+    display: block;
+    margin: 30px auto 30px auto;
+    max-width: 100%;
+    max-height: 400px;
+}
+
+.img-invert img {
+    filter: invert(100%);
+}
+
 @media only screen and (min-width: 1200px) and (max-width: 2200px) {
     .section.col-xl-6 {
         -ms-flex: 0 0 1150px;
